# Unmanned_Aerial_Vehicles

./: .gitignore  CASCADE_PID_vs_GPMPC_COMPARISON_GUIDE.md  COMPARISON_RESULTS.md  DEPLOYMENT_FIXES.md  ENHANCED_COMPARISON_FEATURES.md  EXECUTIVE_SUMMARY.md  GAZEBO_DEPLOYMENT_GUIDE.md  GAZEBO_QUICK_START.md  GP_MPC_METRICS_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  METRICS_SUMMARY.md  MPC_GP_PERFORMANCE_REPORT.md  MPC_SETPOINT_TEST_GUIDE.md  MPC_SETPOINT_TEST_RESULTS.md  MPC_vs_CASCADE_PID_COMPARISON.md  MPC_vs_CASCADE_PID_IMPLEMENTATION.md  MPC_vs_CASCADE_PID_INDEX.md  MPC_vs_CASCADE_PID_QUICK_REFERENCE.md  PERFORMANCE_METRICS_GUIDE.md  QUICK_FIX_REFERENCE.md  README.md  TESTING_AND_DEPLOYMENT_GUIDE.md  TEST_RESULTS.md  XY_TRAJECTORY_FIX.md  paper_quadrotor_control.tex  run_9PID_controller.sh  run_gp_mpc.sh  run_mpc_velocity_control.sh  test_mpc_gp_performance.py
quadrotor_gp_mpc/: package.xml  setup.cfg  setup.py
quadrotor_gp_mpc/launch/: gazebo_gz_x500_mpc.launch.py  gazebo_simulation.launch.py  rviz_visualization.launch.py
quadrotor_gp_mpc/quadrotor_gp_mpc/: demo_system.py  example_metrics.py  gaussian_process.py  gaussian_process_node.py  main.py  mpc_controller.py  mpc_controller_node.py  performance_metrics.py  performance_metrics_node.py  performance_metrics_utils.py  quadrotor_dynamics.py  reference_trajectory_node.py  results_visualizer.py  simple_controller.py  test_mpc_pid.py  test_mpc_setpoint.py  test_mpc_setpoint_stable.py  test_mpc_tuned.py  tf_publisher.py
quadrotor_gp_mpc/urdf/: quadrotor.urdf
(+305 files in other folders)
